--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Learn JavaScript</title>
-
-    <script>
-      console.log("Hello world in Head");
-    </script>
   </head>
   <body>
     <h1>Learn JavaScript</h1>
-    <script>
-      console.log("Hello world in Body");
-    </script>
+    <script src="/index.js"></script>
   </body>
 </html>
