Manipulation number Done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <h1>Learn JavaScript</h1>
-    <script src="/index.js"></script>
+    <ul>
+      <li>
+        <a href="/javascript-learn/manipulation-number/index.html"
+          >Manipulation: Number</a
+        >
+      </li>
+      <li>
+        <a href="/javascript-learn/manipulation-string/index.html"
+          >Manipulation: String</a
+        >
+      </li>
+      <li>
+        <a href="/javascript-learn/comparison-number/index.html"
+          >Comparison: Number</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
