finish javascript project 2

--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
     <h1>Learn JavaScript</h1>
     <ul>
       <li>
-        <a href="/javascript-learn/manipulation-number/index.html"
+        <a href="/javascript-learn/manipulation-number/"
           >Manipulation: Number</a
         >
       </li>
       <li>
-        <a href="/javascript-learn/manipulation-string/index.html"
+        <a href="/javascript-learn/manipulation-string/"
           >Manipulation: String</a
         >
       </li>
       <li>
-        <a href="/javascript-learn/comparison-number/index.html"
-          >Comparison: Number</a
-        >
+        <a href="/javascript-learn/comparison-number/">Comparison: Number</a>
       </li>
+      <li><a href="/project-2/">Project 2</a></li>
     </ul>
   </body>
 </html>
