--- a/javascript-learn/manipulation-string/index.html
+++ b/javascript-learn/manipulation-string/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>String Manipulation</h1>
     <ul>
-      <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../">Home</a></li>
     </ul>
-    <script src="/javascript-learn/manipulation-string/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
