--- a/javascript-learn/manipulation-number/index.html
+++ b/javascript-learn/manipulation-number/index.html
@@ -12,6 +12,6 @@
     <ul>
       <li><a href="../../index.html">Home</a></li>
     </ul>
-    <script src="/javascript-learn/manipulation-number/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
