--- a/project-2/index.html
+++ b/project-2/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Number Comparison</title>
+    <title>Project 2</title>
   </head>
   <body>
-    <h1>Number Comparison</h1>
+    <h1>Project 2</h1>
     <ul>
-      <li><a href="../../index.html">Home</a></li>
+      <li><a href="../../">Home</a></li>
     </ul>
     <script src="./index.js"></script>
   </body>
