FInished calculator for date, time, and simple equations

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <a href="/javascript-learn/comparison-number/">Comparison: Number</a>
       </li>
       <li><a href="/project-2/">Project 2</a></li>
+      <li><a href="/javascript-learn/making-addressbook/">Address Book</a></li>
+      <li><a href="/javascript-learn/making-calculator/">Calculator</a></li>
+      <li><a href="/javascript-learn/making-to-do-app/">To Do App</a></li>
     </ul>
   </body>
 </html>
